# Ubicua-TODO

./: .gitignore  README.md
backend/: README.md  alembic.ini  docker-compose.yml  dockerfile  pyproject.toml  pytest.ini  requirements.txt
backend/app/: cache.py  config.py  database.py  dependencies.py  exceptions.py  main.py  seed.py
backend/app/core/: __init__.py  alert_engine.py  esp32_bridge.py  security.py  serial_handler.py
backend/app/models/: __init__.py  alert.py  device.py  event_log.py  reading.py  sensor.py  threshold.py  user.py
backend/app/routers/: alerts.py  dashboard.py  devices.py  health.py  sensors.py  thresholds.py  websocket.py
backend/app/schemas/: __init__.py  alert.py  device.py  event_log.py  reading.py  sensor.py  threshold.py  user.py
backend/app/services/: __init__.py  alert_service.py  cache_service.py  device_comm_service.py  report_service.py  sensor_service.py
backend/migrations/: env.py
backend/tests/: conftest.py
backend/tests/e2e/: test_full_flow.py
backend/tests/integration/: test_api_alerts.py  test_api_sensors.py  test_websocket.py
backend/tests/unit/: test_alert_engine.py  test_cache.py  test_services.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/hooks/: useAlerts.ts  useDevices.ts  useSensorData.ts  useThresholds.ts  useWebSocket.ts
frontend/src/pages/: AlertsPage.tsx  DashboardPage.tsx  DevicesPage.tsx  ReportsPage.tsx  SensorsPage.tsx  SettingsPage.tsx  ThresholdsPage.tsx
frontend/src/services/: api.ts  cache.ts  (+1 more)
(+29 files in other folders)
