[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.19.0",
    "alembic>=1.12.1",
    "diskcache>=5.6.3",
    "fastapi>=0.104.1",
    "httpx>=0.25.1",
    "prometheus-client>=0.18.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
    "pyserial>=3.5",
    "pyserial-asyncio>=0.6",
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "python-socketio>=5.10.0",
    "sqlalchemy>=2.0.23",
    "uvicorn[standard]>=0.23.2",
]
